Using string options

--- a/.project
+++ b/.project
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-<<<<<<< HEAD
-	<name>javaViradaNoJiraya</name>
-=======
-	<name>javaNoJiraia</name>
->>>>>>> 00e110d5fe2896e508a75824bc48b99df707258c
+	<name>javaNoJiraya</name>
 	<comment></comment>
 	<projects>
 	</projects>
